# raibid-cli

./: .gitignore  .markdownlint.json  .shellcheckrc  CLAUDE.md  Cargo.toml  Cargo.toml.bak  IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR.md  README.md  WORKSPACE.md  old-readme.md  prompt.md  tarpaulin.toml
.cargo/: config.toml
.github/: WORKFLOWS.md  markdown-link-check-config.json
.github/scripts/: assign-next-issue.sh  check-draft-status.sh  spawn-agent-comment.sh
.github/workflows/: agent-container.yml  docs.yml  infra-validation.yml  orchestrator-comment-events.yml  orchestrator-draft-enrichment.yml  orchestrator-issue-events.yml  orchestrator-pr-events.yml  scripts-lint.yml  scripts.yml  test.yml
crates/agent/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  healthcheck.sh  test.sh
crates/agent/src/: config.rs  consumer.rs  error.rs  executor.rs  git.rs  lib.rs  main.rs  pipeline.rs
crates/agent/tests/: pipeline_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/api/: mod.rs
crates/cli/src/cli/: mod.rs
crates/cli/src/commands/: config.rs  destroy.rs  health.rs  init.rs  jobs.rs  mod.rs  setup.rs  status.rs
crates/cli/tests/: jobs_commands.rs
crates/common/: Cargo.toml
crates/common/src/: jobs.rs  lib.rs
crates/common/src/config/: loader.rs  mod.rs
crates/common/src/infrastructure/: error.rs  flux.rs  gitea.rs  healthcheck.rs  k3s.rs  keda.rs  mod.rs  preflight.rs  redis.rs  retry.rs  rollback.rs  status.rs  utils.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  state.rs
crates/server/src/middleware/: mod.rs  request_id.rs
crates/server/src/routes/: health.rs  jobs.rs  mod.rs
crates/server/src/routes/webhooks/: mod.rs  payloads.rs  signature.rs
crates/server/tests/: integration.rs  jobs_api_tests.rs  webhook_tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  events.rs  mock_data.rs  ui.rs
docs/: CLARIFYING_QUESTIONS.md  EVENT_DRIVEN_IMPLEMENTATION_SUMMARY.md  ISSUE_ENRICHMENT_AGENT.md  ORCHESTRATOR_AGENT.md  ORCHESTRATOR_REPORT.md  ORCHESTRATOR_STATUS.md  README.md  SETUP_COMPLETE.md  TESTING_EVENT_DRIVEN_ORCHESTRATION.md  USER_GUIDE.md  cli-jobs-commands.md  issue-test-remediation.md  nvim-tailwind-fix.md  raibid-cli.1  technology-research.md  webhook-configuration.md  ws-02-implementation-summary.md
docs/api/: README.md
docs/architecture/: README.md  event-driven-orchestration.md  orchestration.md
docs/components/: README.md  agent-container.md
docs/diagrams/: README.md  build-workflow.mmd  component-interactions.mmd  deployment-architecture.mmd  system-architecture.mmd  workstream-dependencies.md
docs/guides/: README.md  error-recovery.md  nushell.md
docs/templates/: README.md  adr.md  api-endpoint.md  component-readme.md  guide.md
docs/work/: plan.md
docs/workstreams/: COMPLETION_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  START_HERE.md  STRUCTURE.md
examples/: config.minimal.yaml
examples.old/: config-minimal.yaml  config.example.yaml  config.production.yaml  config.toml  config.yaml
infra/: .yamllint  DEPLOYMENT.md  README.md  Taskfile.yml
infra/flux/: GITOPS_WORKFLOW.md  README.md  TROUBLESHOOTING.md  bootstrap.sh  gitrepository.yaml  kustomization.yaml  namespace.yaml  validate.sh
infra/gitea/: README.md  namespace.yaml  values-dev.yaml  values.yaml
infra/k3s/: INSTALLATION.md  README.md  config.yaml  coredns-custom.yaml  install-flags.txt  install.sh  namespaces.yaml  registries.yaml  resource-quotas.yaml  rootless-config.yaml  storageclass.yaml  validate-installation.sh
infra/keda/: AUTOSCALING.md  DEPLOYMENT_CHECKLIST.md  README.md  deploy-keda.sh  helmrelease.yaml  helmrepository.yaml  kustomization.yaml  namespace.yaml  raibid-ci-kustomization.yaml  scaledjob.yaml  scaledobject.yaml  test-autoscaling.sh  triggerauth.yaml  validate-keda.sh  values.yaml
infra/redis/: MONITORING.md  README.md  configmap.yaml  helmrelease.yaml  helmrepository.yaml  init-job.yaml  namespace.yaml  service.yaml  test-connection.sh  validate.sh  values-dev.yaml  values.yaml
infra/scripts/: check-dependencies.sh  lint-manifests.sh  validate-manifests.sh
scripts/: README.md  TEMPLATE.nu  TEMPLATE.sh  check-docs.sh  launch-orchestrator.nu  orchestrator_monitor.sh
scripts/deploy/: build-release.sh
scripts/dev/: agent-spawner.nu  agent-spawner.sh
scripts/infra/: check-issue-readiness.sh
scripts/nu/: README.md  config.nu  env.nu  validate-setup.nu
scripts/utils/: check-dependencies.sh
src/: lib.rs  main.rs
src.old/: lib.rs
src.old/cli/: mod.rs
src.old/commands/: config.rs
src.old/config/: schema.rs
src.old/infrastructure/: ERROR_HANDLING.md  retry.rs  rollback.rs  utils.rs
src.old/tui/: terminal.rs
src/cli/: mod.rs
src/commands/: agent.rs  job.rs  mirror.rs  mod.rs  setup.rs  status.rs  teardown.rs
src/config/: mod.rs  schema.rs
src/infrastructure/: error.rs  flux.rs  gitea.rs  healthcheck.rs  k3s.rs  keda.rs  mod.rs  preflight.rs  redis.rs  retry.rs  rollback.rs  status.rs  utils.rs
src/tui/: app.rs  events.rs  mock_data.rs  mod.rs  ui.rs
tests/: README.md  TEST_ENVIRONMENT.md  tui_test.rs
tests.old/: README.md  additional_commands_test.rs  config_test.rs  error_handling_test.rs  mock_commands_test.rs  redis_test.rs
tests.old/e2e/: full_workflow_test.rs
tests.old/fixtures/: README.md  minimal_config.yaml  rust_agent_deployment.yaml  sample_config.yaml
tests.old/helpers/: assertions.rs  generators.rs  mock_builders.rs  mod.rs  test_env.rs
tests.old/integration/: flux_test.rs  installation_permissions_test.rs  workspace_integration_test.rs
tests/e2e/: README.md
tests/fixtures/: README.md  sample_config.yaml
tests/helpers/: generators.rs  mod.rs  test_env.rs
tests/infra-validation/: README.md  flux_validation.rs  gitea_validation.rs  health_check_validation.rs  k3s_validation.rs  keda_validation.rs  mod.rs  redis_validation.rs  resource_validation.rs
tests/integration/: build_verification_test.rs  cli_test.rs  flux_bootstrap_test.sh  helpers_example_test.rs  status_test.rs  (+2 more)
(+26 files in other folders)
