[package]
name = "raibid-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CI agent runner for raibid-ci"

[[bin]]
name = "raibid-agent"
path = "src/main.rs"

[dependencies]
# Workspace crates
raibid-common = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Redis
redis = { workspace = true }

# Git
git2 = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
