[package]
name = "raibid-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for raibid-ci - DGX Spark Personal CI Agent Pool"

[[bin]]
name = "raibid"
path = "src/main.rs"

[dependencies]
# Workspace crates
raibid-common = { workspace = true }
raibid-tui = { workspace = true }

# CLI and parsing
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Terminal utilities
colored = { workspace = true }
comfy-table = { workspace = true }
dialoguer = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Time and date
chrono = { workspace = true }

# Utilities
shellexpand = { workspace = true }
dirs = { workspace = true }

# URL encoding for query parameters
urlencoding = "2.1"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
