[package]
name = "raibid-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common types, utilities, and infrastructure for raibid-ci"

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_path_to_error = { workspace = true }
toml = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Utilities
regex = { workspace = true }
shellexpand = { workspace = true }
dirs = { workspace = true }
sha256 = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
byte-unit = { workspace = true }
rand = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
