[package]
name = "raibid-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "API server for raibid-ci job dispatching and management"

[dependencies]
# Workspace crates
raibid-common = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP server (placeholder - will add axum or actix-web later)
# axum = "0.7"
# tower = "0.4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
