[package]
name = "raibid-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for raibid-ci using ratatui"

[dependencies]
# Workspace crates
raibid-common = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Terminal utilities
colored = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
rand = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
